# raytracer

./: Cargo.toml  README.md  box_data.ron  data.ron
src/: main.rs  rtracer.rs  utils.rs
src/rtracer/: bvh.rs  camera.rs  helper.rs  hitinfo.rs  light.rs  material.rs  parser.rs  raycast_info.rs  renderer.rs  scene.rs  scene_object.rs  shape.rs  thread_buffer.rs
src/utils/: aabb.rs  cell_vec.rs  fuzzing.rs  proxy_serialize.rs
