[package]
name = "test_project"
version = "0.1.0"
authors = ["thanadolps <thanadolps@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.23.14"
nalgebra = {version = "0.26.2", features = ["serde-serialize"]}
custom_error = "1.7.1"
rand = {version = "0.8.3", features = ["small_rng"]}
itertools = "0.10.0"
serde = { version = "1.0.114", features = ["derive"] }
ron = "0.6.0"
enum_dispatch = "0.3.1"
assert_approx_eq = "1.1.0"
rand_distr = "0.4.0"
num-traits = "0.2.12"